[gd_scene load_steps=19 format=2]

[ext_resource path="res://title.png" type="Texture" id=1]
[ext_resource path="res://revert.png" type="Texture" id=2]
[ext_resource path="res://end.png" type="Texture" id=3]
[ext_resource path="res://nextq.png" type="Texture" id=4]
[ext_resource path="res://background.png" type="Texture" id=5]
[ext_resource path="res://teamBoxStyle.tres" type="StyleBox" id=6]
[ext_resource path="res://okay.png" type="Texture" id=7]
[ext_resource path="res://ARLRDBD.TTF" type="DynamicFontData" id=8]
[ext_resource path="res://Questions.tscn" type="PackedScene" id=9]
[ext_resource path="res://Confirmation.tscn" type="PackedScene" id=10]
[ext_resource path="res://Game.gd" type="Script" id=11]
[ext_resource path="res://okayDisabled.png" type="Texture" id=12]
[ext_resource path="res://Wipeout.tscn" type="PackedScene" id=13]

[sub_resource type="DynamicFont" id=5]
size = 24
use_filter = true
font_data = ExtResource( 8 )

[sub_resource type="Theme" id=6]
default_font = SubResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.521569, 0, 0.917647, 1 )
border_color = Color( 0, 0, 0, 1 )
corner_detail = 5
anti_aliasing = false

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 8 )

[node name="Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 11 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.501961, 0.768627, 1, 1 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
expand = true
stretch_mode = 5

[node name="MainCT" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeadCT" type="HBoxContainer" parent="MainCT"]
margin_right = 1270.0
margin_bottom = 150.0
rect_min_size = Vector2( 0, 150 )

[node name="Title" type="TextureRect" parent="MainCT/HeadCT"]
self_modulate = Color( 0, 0, 0, 1 )
margin_right = 300.0
margin_bottom = 150.0
rect_min_size = Vector2( 300, 0 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 5

[node name="ProgressCT" type="GridContainer" parent="MainCT/HeadCT"]
margin_left = 304.0
margin_right = 1270.0
margin_bottom = 150.0
size_flags_horizontal = 3

[node name="GameCT" type="HBoxContainer" parent="MainCT"]
margin_top = 154.0
margin_right = 1270.0
margin_bottom = 710.0
size_flags_vertical = 3

[node name="GameBoardCT" type="GridContainer" parent="MainCT/GameCT"]
margin_left = 558.0
margin_top = 278.0
margin_right = 558.0
margin_bottom = 278.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
columns = 8

[node name="ButtonCT" type="VBoxContainer" parent="MainCT/GameCT"]
margin_left = 1120.0
margin_right = 1270.0
margin_bottom = 556.0
rect_min_size = Vector2( 150, 0 )

[node name="PickTeamBTN" type="OptionButton" parent="MainCT/GameCT/ButtonCT"]
margin_right = 150.0
margin_bottom = 73.0
rect_min_size = Vector2( 0, 73 )
size_flags_horizontal = 3
theme = SubResource( 6 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = SubResource( 4 )
custom_styles/normal = ExtResource( 6 )
text = "Pick Team"
align = 1
expand_icon = true
items = [ "Pick Team", null, false, 0, null ]
selected = 0

[node name="YesNoCT" type="HBoxContainer" parent="MainCT/GameCT/ButtonCT"]
margin_top = 77.0
margin_right = 150.0
margin_bottom = 150.0
rect_min_size = Vector2( 0, 73 )

[node name="RevertBTN" type="TextureButton" parent="MainCT/GameCT/ButtonCT/YesNoCT"]
margin_right = 73.0
margin_bottom = 73.0
size_flags_horizontal = 3
texture_normal = ExtResource( 2 )
expand = true

[node name="YesBTN" type="TextureButton" parent="MainCT/GameCT/ButtonCT/YesNoCT"]
margin_left = 77.0
margin_right = 150.0
margin_bottom = 73.0
size_flags_horizontal = 3
texture_normal = ExtResource( 7 )
texture_disabled = ExtResource( 12 )
expand = true

[node name="CenterCT" type="CenterContainer" parent="MainCT/GameCT/ButtonCT"]
margin_top = 154.0
margin_right = 150.0
margin_bottom = 402.0
size_flags_vertical = 3

[node name="CR" type="ColorRect" parent="MainCT/GameCT/ButtonCT/CenterCT"]
visible = false
margin_top = 99.0
margin_right = 150.0
margin_bottom = 149.0
rect_min_size = Vector2( 150, 50 )

[node name="Message" type="Label" parent="MainCT/GameCT/ButtonCT/CenterCT/CR"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 150, 50 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Message"
align = 1
valign = 1
autowrap = true

[node name="NextQuestionBTN" type="TextureButton" parent="MainCT/GameCT/ButtonCT"]
margin_top = 406.0
margin_right = 150.0
margin_bottom = 479.0
rect_min_size = Vector2( 0, 73 )
texture_normal = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="MainCT/GameCT/ButtonCT/NextQuestionBTN"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
text = "Next Question"
align = 1
valign = 1
autowrap = true

[node name="FinishGameBTN" type="TextureButton" parent="MainCT/GameCT/ButtonCT"]
margin_top = 483.0
margin_right = 150.0
margin_bottom = 556.0
rect_min_size = Vector2( 0, 73 )
texture_normal = ExtResource( 3 )
expand = true

[node name="Label" type="Label" parent="MainCT/GameCT/ButtonCT/FinishGameBTN"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
text = "Finish
Game"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Questions" parent="." instance=ExtResource( 9 )]
visible = false

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="Confirmation" parent="." instance=ExtResource( 10 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -180.0
margin_right = 320.0
margin_bottom = 180.0

[node name="Wipeout" parent="." instance=ExtResource( 13 )]
visible = false

[connection signal="item_selected" from="MainCT/GameCT/ButtonCT/PickTeamBTN" to="." method="_on_PickTeamBTN_item_selected"]
[connection signal="pressed" from="MainCT/GameCT/ButtonCT/YesNoCT/RevertBTN" to="." method="_on_RevertBTN_pressed"]
[connection signal="pressed" from="MainCT/GameCT/ButtonCT/YesNoCT/YesBTN" to="." method="_on_YesBTN_pressed"]
[connection signal="pressed" from="MainCT/GameCT/ButtonCT/NextQuestionBTN" to="." method="_on_NextQuestionBTN_pressed"]
[connection signal="pressed" from="MainCT/GameCT/ButtonCT/FinishGameBTN" to="." method="_on_FinishGameBTN_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
